force-app/main/default/objects/Team__c/fields/No_of_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Team_Members__c</fullName>
    <label>No of Team Members</label>
    <summaryForeignKey>Team_Member__c.Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>