force-app/main/default/objects/Team__c/fields/No_of_Vacant_Positions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vacant_Positions__c</fullName>
    <inlineHelpText>No of team members not assigned to Employees</inlineHelpText>
    <label>No of Vacant Positions</label>
    <summaryFilterItems>
        <field>Team_Member__c.Recruitment_Status__c</field>
        <operation>equals</operation>
        <value>Position Vacant</value>
    </summaryFilterItems>
    <summaryForeignKey>Team_Member__c.Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>