force-app/main/default/objects/Team__c/fields/Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>