force-app/main/default/objects/Team__c/listViews/All_Teams.listView-meta.xml
<ListView>
    <fullName>All_Teams</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>No_of_Team_Members__c</columns>
    <columns>No_of_Vacant_Positions__c</columns>
    <columns>Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Teams</label>
</ListView>