force-app/main/default/objects/Team__c/listViews/BOO_Brooke_s_Teams.listView-meta.xml
<ListView>
    <fullName>BOO_Brooke_s_Teams</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>No_of_Team_Members__c</columns>
    <columns>No_of_Vacant_Positions__c</columns>
    <columns>Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Rig 2,Flushby 2,Rig 4,Rig 6,Rig 10,Rig 16</value>
    </filters>
    <label>BOO | Brooke&apos;s Teams</label>
</ListView>