force-app/main/default/objects/Team__c/listViews/BOO_Charlie_s_Teams.listView-meta.xml
<ListView>
    <fullName>BOO_Charlie_s_Teams</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>No_of_Team_Members__c</columns>
    <columns>No_of_Vacant_Positions__c</columns>
    <columns>Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Rig 28,Rig 32</value>
    </filters>
    <label>BOO | Charlie&apos;s Teams</label>
</ListView>