force-app/main/default/objects/Team__c/listViews/Camp_roma_Base_All_Teams.listView-meta.xml
<ListView>
    <fullName>Camp_roma_Base_All_Teams</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>No_of_Team_Members__c</columns>
    <columns>No_of_Vacant_Positions__c</columns>
    <columns>Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Base Camp - Roma</value>
    </filters>
    <label>Camp Roma Base | All Teams</label>
    <sharedTo>
        <group>BOO</group>
        <group>HR</group>
    </sharedTo>
</ListView>