force-app/main/default/objects/Team__c/listViews/Copy_of_Camp_08_All_Teams.listView-meta.xml
<ListView>
    <fullName>Copy_of_Camp_08_All_Teams</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>No_of_Team_Members__c</columns>
    <columns>No_of_Vacant_Positions__c</columns>
    <columns>Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>camp 8</value>
    </filters>
    <label>Camp 08 | All Teams</label>
    <sharedTo>
        <group>BOO</group>
        <group>Camp_8</group>
        <group>Camp_Supervisor</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>